--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,9 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
+    discovery.3scale.net/scheme: http
     openshift.io/generated-by: OpenShiftWebConsole
-  creationTimestamp: "2022-09-07T10:55:39Z"
+    discovery.3scale.net/port: '8080'
   labels:
+    discovery.3scale.net: 'true'
     app: movie-library-app
     app.kubernetes.io/component: movie-library-app
     app.kubernetes.io/instance: movie-library-app
@@ -19,10 +21,6 @@ spec:
     port: 8080
     protocol: TCP
     targetPort: 8080
-  - name: 8443-tcp
-    port: 8443
-    protocol: TCP
-    targetPort: 8443
   selector:
     app: movie-library-app
     deployment: movie-library-app
