--- a/tekton/el-route.yaml
+++ b/tekton/el-route.yaml
@@ -4,12 +4,12 @@ metadata:
   labels:
     app.kubernetes.io/managed-by: EventListener
     app.kubernetes.io/part-of: Triggers
-    eventlistener: movie-library
-  name: el-movie-library
+    eventlistener: movlib-evlist
+  name: movlib-evlist-rt
 spec:
   port:
     targetPort: http-listener
   to:
     kind: Service
-    name: el-movie-library
+    name: el-movlib-evlist
     weight: 100
