--- a/tekton/triggerbinding.yaml
+++ b/tekton/triggerbinding.yaml
@@ -1,7 +1,7 @@
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
-  name: movie-library
+  name: movlib-pipe-bind
 spec:
   params:
   - name: git-repo-url
