--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -3,8 +3,11 @@ kind: Service
 metadata:
   annotations:
     openshift.io/generated-by: OpenShiftWebConsole
+    discovery.3scale.net/scheme: http
+    discovery.3scale.net/port: '8080'
   labels:
     app: movie-library-app
+    discovery.3scale.net: 'true'
     app.kubernetes.io/component: movie-library-app
     app.kubernetes.io/instance: movie-library-app
     app.kubernetes.io/name: movie-library-app
